# test_c_linter

.github/workflows/: PR.yml
task1/: .gitignore  CMakeLists.txt  TestInstantiator.c  fac.c  main.c
